feat: Add favicon.png and update dev/index.html favicon links (dev branch - v5.1.1)

--- a/dev/index.html
+++ b/dev/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-              <title>GTM & dataLayer Playground</title>
+  <title>GTM & dataLayer Playground</title>
+  <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <!-- Application version metadata.  Update these values when you commit new versions.
        app-version holds a simple version string, e.g. 1.2.3, and app-changelog holds
        a short description of what changed. -->
