--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <!-- Application version metadata.  Update these values when you commit new versions.
        app-version holds a simple version string, e.g. 1.2.3, and app-changelog holds
        a short description of what changed. -->
-      <meta name="app-version" content="5.1.0">
-          <meta name="app-changelog" content="Fixed Collapse/Expand Functionality & Temporarily Disabled Drag & Drop & Unified Button Styling with Consistent Grey Color & Enhanced Console Logging">
+      <meta name="app-version" content="5.2.0">
+          <meta name="app-changelog" content="Streamlined Documentation & Improved Header Hierarchy & Refined UI Styling">
   <style>
     /*
      * Base layout styling.  A subtle background colour and modern
