--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <!-- Application version metadata.  Update these values when you commit new versions.
        app-version holds a simple version string, e.g. 1.2.3, and app-changelog holds
        a short description of what changed. -->
-                       <meta name="app-version" content="5.4.0">
-    <meta name="app-changelog" content="Added comprehensive TypeScript type checking with JSDoc annotations for better code reliability and developer experience. All major functions now have proper type annotations and null checks for DOM elements.">
+                       <meta name="app-version" content="5.5.0">
+    <meta name="app-changelog" content="Enhanced dataLayer event handling with improved error handling, better event validation, and optimized performance for high-frequency event processing.">
   <style>
     /*
      * Base layout styling.  A subtle background colour and modern
