--- a/index.html
+++ b/index.html
@@ -2576,7 +2576,7 @@
     }
   }
 
-  const defaultPresets = window.gtmPresets || [];
+  let defaultPresets = [];
   // Track the base presets loaded from the source file (GitHub or
   // local file).  This array is used to determine whether an event
   // in localStorage has diverged from the original source (changed
@@ -2585,7 +2585,7 @@
       // local file is loaded the basePresets will be updated to
   // that processed list.  When the presets are reset, basePresets
   // reverts to the default presets.
-  let basePresets = window.gtmPresets || [];
+  let basePresets = [];
 
   // Split storage solution: separate original loaded events from local changes
   let loadedEvents = []; // Original events from source (GitHub or local file)
@@ -3690,6 +3690,10 @@
         localStorage.setItem('journey_randomize_user', e.target.checked.toString());
       });
     }
+    
+    // Initialize default presets from datalayer.js (now that it's loaded)
+    defaultPresets = window.gtmPresets || [];
+    basePresets = defaultPresets.slice();
     
     // Initialize split storage variables
     const savedLoaded = localStorage.getItem('events_loaded');
