Update version to 5.5.1 - Bug fix for script loading order issue

--- a/dev/index.html
+++ b/dev/index.html
@@ -8,8 +8,8 @@
   <!-- Application version metadata.  Update these values when you commit new versions.
        app-version holds a simple version string, e.g. 1.2.3, and app-changelog holds
        a short description of what changed. -->
-                       <meta name="app-version" content="5.5.0">
-    <meta name="app-changelog" content="Enhanced dataLayer event handling with improved error handling, better event validation, and optimized performance for high-frequency event processing.">
+                       <meta name="app-version" content="5.5.1">
+    <meta name="app-changelog" content="Fix: Script loading order issue where defaultPresets was set before datalayer.js loaded">
   <style>
     /*
      * Base layout styling.  A subtle background colour and modern
